--- a/index.html
+++ b/index.html
@@ -86,5 +86,6 @@
     <section class="container-card-activities">
       <div class="card-activities">soy un contenedor</div>
     </section>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
